--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #0ef14b; }
+  background: #a3e5fc; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #be6c47; }
+  background: #07c2e4; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #03d77a; }
+  background: #21678c; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #dd89c6; }
+  background: #5e0698; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #0a5292; }
+  background: #c2698e; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #b03e38; }
+  background: #eca6de; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #01f203; }
+  background: #ddca0e; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #adafb8; }
+  background: #bff601; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #8712ef; }
+  background: #eff45d; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #e6f427; }
+  background: #1f4463; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #553212; }
+  background: #243f36; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #192dc7; }
+  background: #2bd7ad; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #f30cf9; }
+  background: #6fabe6; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #0537ca; }
+  background: #615d78; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #faeacd; }
+  background: #43d61e; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #df72b4; }
+  background: #658e17; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #5380d1; }
+  background: #cb1b6a; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #a28659; }
+  background: #9265b7; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #173012; }
+  background: #e603ea; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #16678e; }
+  background: #eb2064; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #43c1d8; }
+  background: #5a94f8; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #3696a2; }
+  background: #8f0bd9; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #e28716; }
+  background: #27fbf5; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #bf150d; }
+  background: #bd35b6; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #e7cee9; }
+  background: #e1073a; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #85b2a9; }
+  background: #c46f9c; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #01ae21; }
+  background: #efcebf; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #af8b55; }
+  background: #f504b8; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #d41fd1; }
+  background: #f9a95c; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #8c8a39; }
+  background: #0ccb10; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #3e8be6; }
+  background: #af855e; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #a01073; }
+  background: #0ab219; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #8b9712; }
+  background: #b62271; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #edfcb5; }
+  background: #f253ad; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #dc4871; }
+  background: #880c44; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #5b3449; }
+  background: #852934; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #06153f; }
+  background: #d04488; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #f74d5a; }
+  background: #73f781; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #8e0bb5; }
+  background: #4323f6; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #f19497; }
+  background: #6d9d6b; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #5cb8a4; }
+  background: #fb2107; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #6c7410; }
+  background: #87efeb; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #bbd492; }
+  background: #24ec7f; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #70cebe; }
+  background: #3ccb55; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #ee06bd; }
+  background: #3b1a7f; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #5e1765; }
+  background: #f7dd7d; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #4339d3; }
+  background: #8e22a0; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #8f881c; }
+  background: #b32b29; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #0bebbd; }
+  background: #448d86; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #3ffa12; }
+  background: #521e2c; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #1cb096; }
+  background: #8557d6; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #d8a081; }
+  background: #b1f783; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #8b8b20; }
+  background: #ee6f34; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #a07109; }
+  background: #abc0f0; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #404f9b; }
+  background: #064fe9; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #a10bd5; }
+  background: #dea840; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #d13958; }
+  background: #e2e92d; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #ec2949; }
+  background: #11976a; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #27f0d8; }
+  background: #be3288; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #abca76; }
+  background: #5e7201; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #597315; }
+  background: #363ba5; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #f4a779; }
+  background: #8037b6; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #6e543c; }
+  background: #aabab1; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #243af5; }
+  background: #fc708c; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #c5accc; }
+  background: #5c910d; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #606917; }
+  background: #f21550; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #6826e1; }
+  background: #d7f8d0; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #b791b4; }
+  background: #47e088; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #94c04d; }
+  background: #642cf1; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #1cdf05; }
+  background: #a3be27; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #400b14; }
+  background: #eb0dc0; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #7444eb; }
+  background: #052516; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #09ff87; }
+  background: #59500c; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #502f3e; }
+  background: #9e3b09; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #511f17; }
+  background: #a0bfab; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #15ab89; }
+  background: #fc784b; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #b03333; }
+  background: #7389e2; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #789b72; }
+  background: #483a9f; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #a319c3; }
+  background: #59fba1; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #12108e; }
+  background: #68f39d; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #0abb44; }
+  background: #3745d0; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #a26bbb; }
+  background: #85be89; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #162bb7; }
+  background: #143d47; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #29b4bb; }
+  background: #e2ea5b; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #c56080; }
+  background: #672d18; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #58b1e3; }
+  background: #c087cc; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #c1f7aa; }
+  background: #3b6810; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #13cc14; }
+  background: #63784a; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #4c17a0; }
+  background: #4c362f; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #1fb495; }
+  background: #8909ef; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #110ec5; }
+  background: #92368e; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #c07cde; }
+  background: #d1ff41; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #3e0383; }
+  background: #ed84f5; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #ccfbca; }
+  background: #5efb06; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #f5ea04; }
+  background: #04aeb8; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #65f631; }
+  background: #24fd02; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #e57603; }
+  background: #0af31b; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #45fe9d; }
+  background: #6d441a; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #28a237; }
+  background: #ea10dd; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #61ddc7; }
+  background: #b0a6b5; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12560,7 +12560,9 @@ td .check-container {
 .head {
   padding: 13px 15px;
   border-radius: 6px 6px 0px 0px;
-  background: #56bcd9; }
+  background: #56bcd9;
+  z-index: 4000;
+  position: relative; }
   .head a {
     margin: 0px;
     font-size: 14px; }
