--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #a3e5fc; }
+  background: #1fb981; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #07c2e4; }
+  background: #8212d6; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #21678c; }
+  background: #867a57; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #5e0698; }
+  background: #21031d; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #c2698e; }
+  background: #8f3d09; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #eca6de; }
+  background: #cbf066; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #ddca0e; }
+  background: #d47439; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #bff601; }
+  background: #e8fd05; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #eff45d; }
+  background: #dbd523; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #1f4463; }
+  background: #c2e757; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #243f36; }
+  background: #372503; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #2bd7ad; }
+  background: #2c1fa9; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #6fabe6; }
+  background: #b42290; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #615d78; }
+  background: #d9fca0; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #43d61e; }
+  background: #b3ee1b; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #658e17; }
+  background: #c0d5dc; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #cb1b6a; }
+  background: #b6dfda; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #9265b7; }
+  background: #d94624; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #e603ea; }
+  background: #41068c; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #eb2064; }
+  background: #5872d2; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #5a94f8; }
+  background: #7b1532; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #8f0bd9; }
+  background: #8f4554; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #27fbf5; }
+  background: #89f64f; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #bd35b6; }
+  background: #d0e6af; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #e1073a; }
+  background: #ac029b; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #c46f9c; }
+  background: #5e4f81; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #efcebf; }
+  background: #5b294e; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #f504b8; }
+  background: #77d4f9; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #f9a95c; }
+  background: #f0cfa1; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #0ccb10; }
+  background: #f48ac1; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #af855e; }
+  background: #bbd21d; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #0ab219; }
+  background: #4fd745; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #b62271; }
+  background: #385720; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #f253ad; }
+  background: #a99022; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #880c44; }
+  background: #b2b7d0; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #852934; }
+  background: #4bc8d8; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #d04488; }
+  background: #5d3c08; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #73f781; }
+  background: #74b85d; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #4323f6; }
+  background: #45eefa; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #6d9d6b; }
+  background: #b6b9e4; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #fb2107; }
+  background: #0e54dc; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #87efeb; }
+  background: #471f81; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #24ec7f; }
+  background: #7699e6; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #3ccb55; }
+  background: #908de9; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #3b1a7f; }
+  background: #5dbc5e; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #f7dd7d; }
+  background: #88f0d4; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #8e22a0; }
+  background: #c01546; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #b32b29; }
+  background: #78e84f; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #448d86; }
+  background: #f318e4; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #521e2c; }
+  background: #713371; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #8557d6; }
+  background: #19a5df; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #b1f783; }
+  background: #589a32; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #ee6f34; }
+  background: #e6feac; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #abc0f0; }
+  background: #6d6bd4; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #064fe9; }
+  background: #dd805c; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #dea840; }
+  background: #182645; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #e2e92d; }
+  background: #fdb414; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #11976a; }
+  background: #d80152; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #be3288; }
+  background: #d00ef8; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #5e7201; }
+  background: #eee0b4; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #363ba5; }
+  background: #a6c52f; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #8037b6; }
+  background: #420ea5; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #aabab1; }
+  background: #c4b697; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #fc708c; }
+  background: #588140; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #5c910d; }
+  background: #894c4b; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #f21550; }
+  background: #3fb7bd; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #d7f8d0; }
+  background: #35b463; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #47e088; }
+  background: #8de17c; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #642cf1; }
+  background: #864f10; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #a3be27; }
+  background: #1ab27c; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #eb0dc0; }
+  background: #ed1539; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #052516; }
+  background: #c2cca4; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #59500c; }
+  background: #c0ad0b; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #9e3b09; }
+  background: #2d0bec; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #a0bfab; }
+  background: #43fec5; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #fc784b; }
+  background: #da2a99; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #7389e2; }
+  background: #153f7b; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #483a9f; }
+  background: #4816e5; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #59fba1; }
+  background: #dc60bf; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #68f39d; }
+  background: #5da68d; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #3745d0; }
+  background: #b9f7ad; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #85be89; }
+  background: #1d5581; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #143d47; }
+  background: #754c14; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #e2ea5b; }
+  background: #77cf75; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #672d18; }
+  background: #840688; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #c087cc; }
+  background: #9a5649; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #3b6810; }
+  background: #7ac3cb; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #63784a; }
+  background: #5ebfd4; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #4c362f; }
+  background: #bd610c; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #8909ef; }
+  background: #f3a534; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #92368e; }
+  background: #82a32c; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #d1ff41; }
+  background: #73bd44; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #ed84f5; }
+  background: #f529ac; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #5efb06; }
+  background: #5a90f6; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #04aeb8; }
+  background: #7187d7; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #24fd02; }
+  background: #b6ab5e; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #0af31b; }
+  background: #c36d6a; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #6d441a; }
+  background: #474ebe; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #ea10dd; }
+  background: #443519; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #b0a6b5; }
+  background: #892883; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12643,6 +12643,38 @@ td .check-container {
 
   .message {
     font-size: 13px; } }
+.notification-lists-wrapper table .parent-row-gray td {
+  color: #505050 !important; }
+.notification-lists-wrapper table .parent-row {
+  border-bottom: 1px solid #ecedf2; }
+  .notification-lists-wrapper table .parent-row td {
+    vertical-align: middle;
+    padding: 12px 8px 12px 8px !important;
+    color: #000; }
+  .notification-lists-wrapper table .parent-row .c-red {
+    padding: 4px;
+    background: #f00f00;
+    border-radius: 100%;
+    display: block;
+    width: 6px;
+    height: 6px;
+    margin-left: 6px; }
+  .notification-lists-wrapper table .parent-row .c-gray {
+    padding: 4px;
+    border-radius: 100%;
+    display: block;
+    width: 6px;
+    height: 6px;
+    margin-left: 6px; }
+  .notification-lists-wrapper table .parent-row .border-bottom-left {
+    border-bottom-left-radius: 0px; }
+  .notification-lists-wrapper table .parent-row .border-top-left {
+    border-top-left-radius: 0px; }
+  .notification-lists-wrapper table .parent-row .border-bottom-right {
+    border-bottom-right-radius: 0px; }
+  .notification-lists-wrapper table .parent-row .border-top-right {
+    border-top-right-radius: 0px; }
+
 @media screen and (max-width: 767px) {
   .profile-box {
     padding: 10px; }
