--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #1fb981; }
+  background: #098be3; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #8212d6; }
+  background: #16c571; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #867a57; }
+  background: #e2579b; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #21031d; }
+  background: #9d10d6; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #8f3d09; }
+  background: #13905b; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #cbf066; }
+  background: #5c4f34; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #d47439; }
+  background: #03d160; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #e8fd05; }
+  background: #bbdca9; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #dbd523; }
+  background: #3dc01a; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #c2e757; }
+  background: #7cd095; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #372503; }
+  background: #e0668f; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #2c1fa9; }
+  background: #79d95a; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #b42290; }
+  background: #d9c51d; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #d9fca0; }
+  background: #dfacdc; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #b3ee1b; }
+  background: #1f436d; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #c0d5dc; }
+  background: #3fd50e; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #b6dfda; }
+  background: #4eeb5e; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #d94624; }
+  background: #46b846; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #41068c; }
+  background: #e94e6a; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #5872d2; }
+  background: #4c2f65; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #7b1532; }
+  background: #952e0e; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #8f4554; }
+  background: #c9b320; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #89f64f; }
+  background: #800c80; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #d0e6af; }
+  background: #aa22df; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #ac029b; }
+  background: #84a523; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #5e4f81; }
+  background: #2006ae; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #5b294e; }
+  background: #f9428c; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #77d4f9; }
+  background: #e59d01; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #f0cfa1; }
+  background: #188432; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #f48ac1; }
+  background: #4581dd; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #bbd21d; }
+  background: #ccb8a7; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #4fd745; }
+  background: #252a82; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #385720; }
+  background: #c73bc2; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #a99022; }
+  background: #e10fd9; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #b2b7d0; }
+  background: #1dbec8; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #4bc8d8; }
+  background: #bf028a; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #5d3c08; }
+  background: #294bf6; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #74b85d; }
+  background: #58e0ab; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #45eefa; }
+  background: #ff7150; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #b6b9e4; }
+  background: #e18e2b; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #0e54dc; }
+  background: #f5e865; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #471f81; }
+  background: #94b546; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #7699e6; }
+  background: #ad95f5; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #908de9; }
+  background: #9ac350; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #5dbc5e; }
+  background: #cce12b; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #88f0d4; }
+  background: #4341cf; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #c01546; }
+  background: #1708f8; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #78e84f; }
+  background: #546b6c; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #f318e4; }
+  background: #d19bfe; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #713371; }
+  background: #4c7af4; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #19a5df; }
+  background: #c78f0b; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #589a32; }
+  background: #b2ba34; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #e6feac; }
+  background: #ceefb0; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #6d6bd4; }
+  background: #8ff7ae; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #dd805c; }
+  background: #634a5f; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #182645; }
+  background: #8a3a5a; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #fdb414; }
+  background: #fb6a88; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #d80152; }
+  background: #4d0a74; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #d00ef8; }
+  background: #a25a16; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #eee0b4; }
+  background: #f1dec5; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #a6c52f; }
+  background: #eb81b5; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #420ea5; }
+  background: #c237be; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #c4b697; }
+  background: #f3f262; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #588140; }
+  background: #5e247f; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #894c4b; }
+  background: #6e1f3d; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #3fb7bd; }
+  background: #20438e; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #35b463; }
+  background: #a4d19b; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #8de17c; }
+  background: #d277ca; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #864f10; }
+  background: #8112ca; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #1ab27c; }
+  background: #0ae849; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #ed1539; }
+  background: #5a6043; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #c2cca4; }
+  background: #526955; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #c0ad0b; }
+  background: #5a3477; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #2d0bec; }
+  background: #ca5dca; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #43fec5; }
+  background: #9df520; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #da2a99; }
+  background: #b66e8a; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #153f7b; }
+  background: #963673; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #4816e5; }
+  background: #1b3a4e; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #dc60bf; }
+  background: #91e1d7; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #5da68d; }
+  background: #0bac92; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #b9f7ad; }
+  background: #cb9e4e; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #1d5581; }
+  background: #8bc940; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #754c14; }
+  background: #3b2ec9; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #77cf75; }
+  background: #710a6b; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #840688; }
+  background: #0feda2; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #9a5649; }
+  background: #4128a3; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #7ac3cb; }
+  background: #16e5ab; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #5ebfd4; }
+  background: #7d59a2; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #bd610c; }
+  background: #33bafe; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #f3a534; }
+  background: #a56326; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #82a32c; }
+  background: #60fafb; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #73bd44; }
+  background: #2c4183; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #f529ac; }
+  background: #94eb39; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #5a90f6; }
+  background: #827ad7; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #7187d7; }
+  background: #dcafed; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #b6ab5e; }
+  background: #616cc1; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #c36d6a; }
+  background: #d58765; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #474ebe; }
+  background: #b192d2; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #443519; }
+  background: #c0366f; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #892883; }
+  background: #ee638c; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12644,12 +12644,12 @@ td .check-container {
   .message {
     font-size: 13px; } }
 .notification-lists-wrapper table .parent-row-gray td {
-  color: #505050 !important; }
+  color: #777 !important; }
 .notification-lists-wrapper table .parent-row {
   border-bottom: 1px solid #ecedf2; }
   .notification-lists-wrapper table .parent-row td {
     vertical-align: middle;
-    padding: 12px 8px 12px 8px !important;
+    padding: 15px 8px 15px 0px !important;
     color: #000; }
   .notification-lists-wrapper table .parent-row .c-red {
     padding: 4px;
@@ -12658,14 +12658,15 @@ td .check-container {
     display: block;
     width: 6px;
     height: 6px;
-    margin-left: 6px; }
+    margin-left: 15px; }
   .notification-lists-wrapper table .parent-row .c-gray {
+    background: #777;
     padding: 4px;
     border-radius: 100%;
     display: block;
     width: 6px;
     height: 6px;
-    margin-left: 6px; }
+    margin-left: 15px; }
   .notification-lists-wrapper table .parent-row .border-bottom-left {
     border-bottom-left-radius: 0px; }
   .notification-lists-wrapper table .parent-row .border-top-left {
