--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #098be3; }
+  background: #f8faf4; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #16c571; }
+  background: #8ec1d9; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #e2579b; }
+  background: #5362d1; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #9d10d6; }
+  background: #5b0cca; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #13905b; }
+  background: #6b61b7; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #5c4f34; }
+  background: #c73ff4; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #03d160; }
+  background: #e6a464; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #bbdca9; }
+  background: #af0862; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #3dc01a; }
+  background: #c9b839; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #7cd095; }
+  background: #3226e7; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #e0668f; }
+  background: #a422f9; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #79d95a; }
+  background: #1ab14f; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #d9c51d; }
+  background: #5cea1f; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #dfacdc; }
+  background: #09786d; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #1f436d; }
+  background: #799889; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #3fd50e; }
+  background: #e00f59; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #4eeb5e; }
+  background: #33c034; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #46b846; }
+  background: #2f51de; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #e94e6a; }
+  background: #d9ca60; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #4c2f65; }
+  background: #a10261; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #952e0e; }
+  background: #a7632f; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #c9b320; }
+  background: #ca51d3; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #800c80; }
+  background: #672fa4; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #aa22df; }
+  background: #61eb53; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #84a523; }
+  background: #c63af4; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #2006ae; }
+  background: #9f81ff; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #f9428c; }
+  background: #983917; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #e59d01; }
+  background: #04b3a4; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #188432; }
+  background: #4cc0e6; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #4581dd; }
+  background: #541469; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #ccb8a7; }
+  background: #e6806b; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #252a82; }
+  background: #870643; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #c73bc2; }
+  background: #77b83a; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #e10fd9; }
+  background: #de0664; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #1dbec8; }
+  background: #097b11; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #bf028a; }
+  background: #c63072; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #294bf6; }
+  background: #6b6876; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #58e0ab; }
+  background: #9d08c0; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #ff7150; }
+  background: #9c0eaf; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #e18e2b; }
+  background: #117482; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #f5e865; }
+  background: #d018d1; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #94b546; }
+  background: #da6202; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #ad95f5; }
+  background: #7da268; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #9ac350; }
+  background: #af3ff1; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #cce12b; }
+  background: #c16ec8; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #4341cf; }
+  background: #fc73bb; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #1708f8; }
+  background: #db50f4; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #546b6c; }
+  background: #b3715a; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #d19bfe; }
+  background: #e5c316; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #4c7af4; }
+  background: #e02813; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #c78f0b; }
+  background: #df3d5a; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #b2ba34; }
+  background: #a10a5c; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #ceefb0; }
+  background: #aec7c2; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #8ff7ae; }
+  background: #f2c857; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #634a5f; }
+  background: #40528e; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #8a3a5a; }
+  background: #5a7125; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #fb6a88; }
+  background: #561f6c; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #4d0a74; }
+  background: #a7dd61; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #a25a16; }
+  background: #0d6742; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #f1dec5; }
+  background: #84ca2e; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #eb81b5; }
+  background: #26abda; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #c237be; }
+  background: #edb6bc; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #f3f262; }
+  background: #f3afb5; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #5e247f; }
+  background: #fec779; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #6e1f3d; }
+  background: #c08344; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #20438e; }
+  background: #3bb9bb; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #a4d19b; }
+  background: #4a9f11; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #d277ca; }
+  background: #8859fb; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #8112ca; }
+  background: #7a587c; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #0ae849; }
+  background: #03cdea; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #5a6043; }
+  background: #5175a5; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #526955; }
+  background: #568fee; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #5a3477; }
+  background: #f64e0d; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #ca5dca; }
+  background: #e6e096; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #9df520; }
+  background: #cd7796; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #b66e8a; }
+  background: #24c613; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #963673; }
+  background: #a32e6f; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #1b3a4e; }
+  background: #82d4a9; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #91e1d7; }
+  background: #2c1a47; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #0bac92; }
+  background: #4418d2; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #cb9e4e; }
+  background: #95e30b; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #8bc940; }
+  background: #4df625; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #3b2ec9; }
+  background: #5afdea; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #710a6b; }
+  background: #21c521; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #0feda2; }
+  background: #b447e3; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #4128a3; }
+  background: #566d4e; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #16e5ab; }
+  background: #ff2484; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #7d59a2; }
+  background: #fb7426; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #33bafe; }
+  background: #3b4dd8; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #a56326; }
+  background: #d496ad; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #60fafb; }
+  background: #c471d1; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #2c4183; }
+  background: #c0fdb5; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #94eb39; }
+  background: #0927a5; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #827ad7; }
+  background: #43a2eb; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #dcafed; }
+  background: #649990; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #616cc1; }
+  background: #118590; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #d58765; }
+  background: #52096c; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #b192d2; }
+  background: #f32f39; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #c0366f; }
+  background: #0fe1b2; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #ee638c; }
+  background: #cdf9ab; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12675,6 +12675,15 @@ td .check-container {
     border-bottom-right-radius: 0px; }
   .notification-lists-wrapper table .parent-row .border-top-right {
     border-top-right-radius: 0px; }
+
+.Notification-model-wrapper {
+  position: relative;
+  height: 310px; }
+  .Notification-model-wrapper .model-header-div {
+    display: flex;
+    justify-content: space-between; }
+  .Notification-model-wrapper .time-date-notify {
+    font-size: 12px; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
